Fix alignment for short names/taglines

--- a/landscape-large.css
+++ b/landscape-large.css
@@ -34,6 +34,8 @@ body {
 
 #name {
   float: right;
+  width: 440px;
+  text-align: right;
   padding-right: 20px;
   padding-top: 52px;
   color: black;
@@ -44,6 +46,8 @@ body {
 
 #tagline {
   float: right;
+  width: 440px;
+  text-align: right;
   padding-right: 20px;
   padding-top: 5px;
   color: black;
